--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,12 @@
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
 }
+.services {
+  height: 100vh;
+  width:100%;
+  background: url(../images/s_image.jpg);
+  background-position: top;
+  background-size: cover;
+  /*background-attachment: fixed;*/
+  background-repeat: no-repeat;
+}
