--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,13 @@
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
 }
+.contactUs {
+  height: 100vh;
+  width:100%;
+  background: url(../images/c_image.jpg);
+  background-position: top;
+  background-size: cover;
+  /*background-attachment: fixed;*/
+  background-repeat: no-repeat;
+}
+}
