--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   color: white;
+  
+
 }
 .services {
   background: url(../images/s_image.jpg);
@@ -13,6 +15,8 @@
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   color: white;
+  margin-top: 15%;
+  transform: translateY(-15%);
 }
 .contactUs {
   background: url(../images/c_image.jpg);
@@ -21,6 +25,8 @@
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   color: white;
+  margin-top: 15%;
+  transform: translateY(-15%);
 }
 .logo1{
   text-align: center;
@@ -29,5 +35,8 @@
 
 .logo2{
   text-align: center;
-
+}
+.aboutUs {
+  margin-top: 10%;
+  transform: translateY(-10%);
 }
