--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,32 @@
   margin-top: 10%;
   transform: translateY(-10%);
 }
+.clickable {
+     cursor: pointer;
+     color: #0088cc;
+   }
+
 .socialMediaIcons {
   text-align: center;
+}
+.portfolio .column {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+
+.portfolio .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.design-show{
+  display: none;
+}
+.development-show {
+  display: none;
+}
+.productManagement-show {
+  display: none;
 }
