--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,22 @@
 
 
 }
+.intro-paragragh {
+  text-align: center;
+  padding-top: 150px;
+  height: 50px;
+
+}
+.about-us-text {
+  text-align: center;
+  padding: 6px;
+  margin: 20px;
+}
+.services-text {
+  text-align: center;
+    padding:6px;
+    margin: 20px;
+}
 .services {
   background: url(../images/s_image.jpg);
   background-position: top;
@@ -15,8 +31,7 @@
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   color: white;
-  margin-top: 15%;
-  transform: translateY(-15%);
+
 }
 .contactUs {
   background: url(../images/c_image.jpg);
@@ -30,18 +45,21 @@
 }
 .logo1{
   text-align: center;
+  padding-top: 150px;
+  height: 50px;
 
 }
 
 .logo2{
   text-align: center;
+  padding-top:300px;
+  height: 50%;
+  margin: 20px;
 }
-.aboutUs {
-  margin-top: 10%;
-  transform: translateY(-10%);
-}
+
 .socialMediaIcons {
   text-align: center;
+
 }
 .portfolio .column {
   float: left;
