--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,13 @@
   margin: 20px;
 }
 
-.socialMediaIcons {
+footer {
   text-align: center;
+  width: 100%;
 
+}
+footer p {
+  margin: 20px;
 }
 * {
   border-sizing: border-box;
