--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,9 @@
 }
 .services-text {
   text-align: center;
-    padding:6px;
-    margin: 20px;
+  padding:6px;
+  margin : 20px;
+
 }
 .services {
   background: url(../images/s_image.jpg);
@@ -31,6 +32,8 @@
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   color: white;
+
+
 
 }
 .contactUs {
@@ -134,4 +137,35 @@ figure {
 }
 .contactUs h2 {
   font-weight: bold;
+}
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: white;
+  background-color: unset;
+  background-clip: padding-box;
+  border: 1px solid white;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+#YourMessage {
+  margin: 40px;
+  color: white;
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 5rem 2rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: unset;
+  background-clip: padding-box;
+  border: 1px solid white;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
