--- a/css/styles.css
+++ b/css/styles.css
@@ -178,3 +178,10 @@ padding: 10px 20px;
 font-size: 2em;
 font-weight: 600;
 }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: fantasy;
+  font: Jazz LET;
+  font-size: 1.2em;
+}
